# Accountly

./: lambda_handler.py
accountly_backend_example/accountly_client/: Cargo.toml
accountly_backend_example/accountly_client/src/: main.rs
