[package]
name = "accountly_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# avoid OpenSSL by using rustls
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
